# ford

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README.rst  example-project-file.md  ford.py  forte.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  corpus_regressions.yml  docker.yml  python_publish.yml  test.yml
docs/: conf.py  index.rst
docs/_static/: ford_docs_custom.css
docs/api/: ford._markdown.rst  ford.external_project.rst  ford.fixed2free2.rst  ford.fortran_project.rst  ford.graphmanager.rst  ford.graphs.rst  ford.intrinsics.rst  ford.md_admonition.rst  ford.md_environ.rst  ford.md_striped_table.rst  ford.output.rst  ford.pagetree.rst  ford.reader.rst  ford.rst  ford.settings.rst  ford.sourceform.rst  ford.tipue_search.rst  ford.utils.rst  ford.version.rst  modules.rst
docs/developers_guide/: index.rst
docs/user_guide/: command_line_options.rst  documentation_meta_data.rst  getting_started.rst  index.rst  limitation.rst  project_file_options.rst  running_ford.rst  writing_documentation.rst  writing_pages.rst
example/: example-project-file.md  fpm.toml
example/pages/: index.md  subpage1.md  subpage2.md  subpage3.md
example/pages/subdir/: index.md  subsubpage.md
example/src/: excluded_file.f90  ford_example_type.f90  ford_f77_example.f  ford_interfaces.f90  ford_test_module.fpp  ford_test_program.f90
example/src/excluded_directory/: this_file_will_not_be_included.f90
ford/: __init__.py  __init__.py.orig  __main__.py  _markdown.py  _typing.py  admonition.py  console.py  external_project.py  fixed2free2.py  fortran_project.py  graphmanager.py  graphs.py  intrinsics.py  mathjax.py  md_admonition.py  md_environ.py  md_extensions.py  md_striped_table.py  md_table.py  mdx_include.py  mdx_math.py  mdx_mathjax.py  output.py  output.py.orig  pagetree.py  reader.py  settings.py  sourceform.py  tipue_search.py  tree_sitter_parser.py  utils.py  version.py
ford/AdminLTE Templates/: base.html  file_list.html  index.html  macros.html  nongenint_page.html
ford/css/: bootstrap-theme.css  bootstrap-theme.min.css  local.css
ford/js/: bootstrap.min.js
ford/templates/: absint_list.html  base.html  block_list.html  block_page.html  file_list.html  file_page.html  genint_page.html  index.html  info_page.html  interface_page.html  macros.html  mod_list.html  mod_page.html  namelist_list.html  namelist_page.html  nongenint_page.html  proc_list.html  proc_page.html  prog_list.html  prog_page.html  search.html  type_page.html  types_list.html
ford/templates/AdminLTE/: absint_list.html  base.html  file_page.html  info_page.html  mod_list.html  mod_page.html  proc_list.html  proc_page.html  search.html  type_page.html
ford/templates/AdminLTE/assets/PrismJS/1.15.0/: prism-c-fortran-bash-shell-makefile_autolink-keepmarkup.css  (+2 more)
ford/templates/AdminLTE/assets/fonts/: source-san-pro.css
ford/templates/default/: base.html  block_list.html  index.html  mod_list.html  proc_list.html  proc_page.html
ford/templates/default/assets/js/: prism-c-fortran-bash-shell-makefile_autolink-keepmarkup.js
ford/tipuesearch/: tipuesearch_set.js
forte/: config.json  fortran_project.py  md_processing.py  output.py  sourceform.py
forte/js/: bootstrap.js
forte/templates/: contents.html  file_list.html  interface_page.html  prog_list.html  types_list.html  variable.html
namelist_src/src/namelist_src.f90/: namelist_example.f90  namelist_example_project
src-example/: EXAMPLE-PROJECT-INFO  ford_test_program.f90
test/: conftest.py  reader_test.py  reader_tst.py  test_corpus.py  test_example.py  test_graphs.py  test_initialisation.py  test_markdown.py  test_md_admonition.py  test_md_environ.py  test_md_inputs.py  test_md_table.py  test_pagetree.py  test_project.py  test_reader.py  test_settings.py  test_sourceform.py  test_tree_sitter_parser.py  test_utils.py
test/test_projects/: test_676.py  test_external_project.py
test_data/: ford_issues_bad.f90  ford_issues_ok.f90  ford_issues_ok_expected.f90  ford_test_program_expected.f90
test_data/external_project/external_project/: doc.md
test_data/external_project/external_project/src/: external.f90
test_data/external_project/top_level_project/: doc.md
test_data/external_project/top_level_project/src/: top_level.f90
test_data/issue_676/base/: doc.md
test_data/issue_676/base/src/: gc_method_h.f90  gc_pointers_h.f90
test_data/issue_676/plugin/: doc.md
test_data/issue_676/plugin/src/: gc_method_fks_h.f90
(+10 files in other folders)
