[metadata]
name = FORD
description = FORD, standing for FORtran Documenter, is an automatic documentation generator for modern Fortran programs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fortran-FOSS-Programmers/ford
author = Chris MacMackin
author_email = cmacmackin@gmail.com
license = GPLv3
license_files = LICENSE
keywords = Markdown, Fortran, documentation, comments
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Documentation
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Documentation
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/Fortran-FOSS-Programmers/ford
    Tracker = https://github.com/Fortran-FOSS-Programmers/ford/issues

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
   markdown ~= 3.4.0
   markdown-include ~= 0.7.0
   python-markdown-math ~= 0.8
   toposort ~= 1.7.0
   jinja2 >= 2.1
   pygments ~= 2.12.0
   beautifulsoup4 >=4.5.1
   graphviz ~= 0.20.0
   tqdm ~= 4.64.0
include_package_data = True

[options.packages.find]
include = ford*

[options.extras_require]
tests = pytest >= 3.3.0
docs =
     sphinx >= 5.3
     sphinx_autodoc_typehints >= 1.19
     sphinx-book-theme >= 0.4.0rc1
     sphinx-argparse-cli >= 1.10.0

[options.entry_points]
console_scripts =
   ford = ford:run
